<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filter"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menu_filter_title"
                android:title="@string/filter_by_title" />

            <item
                android:id="@+id/menu_filter_position"
                android:title="@string/filter_by_position" />

            <item
                android:id="@+id/menu_filter_priority"
                android:title="@string/filter_by_priority" />

            <item
                android:id="@+id/menu_filter_date"
                android:title="@string/filter_by_date" />

            <item
                android:id="@+id/menu_filter_status"
                android:title="@string/filter_by_status" />
        </menu>
    </item>
</menu>