<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.BaseTaskActivity">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priority"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/date"
            android:importantForAutofill="no"
            android:inputType="datetime"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/time"
            android:importantForAutofill="no"
            android:inputType="datetime"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:text="@string/save" />
</RelativeLayout>

